--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
       
     <!-- Scripts -->
     <script src="js/jquery-1.11.3.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?AIzaSyAv7HBnBjvRpB7YBXkqtyylgKoT89ppQBY"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/curtains.js"></script>
     <script src="js/smoothScroll.js"></script>
