--- a/index.html
+++ b/index.html
@@ -140,7 +140,12 @@
               
               <div class="row">
                 <p class="text-muted">Felicitat.</p>
-                <p class="text-muted">Una paraula que és sent molt sovint però poques vegades la podem experimentar, aquelles ganes de veure't, de veure un missatge teu al whats app, quan m'abraces, quan em fas un peto, quan em fas riure. Quan sóc amb tu experimento felicitat el 100% del temps! Per això crec que no m'equivoco si et dic que ets el noi que feia temps que estava buscant, tinc ganes de compartir els màxims moments possibles amb tu, quins moments? Llegeix la pàgina següent ;)</p>
+                <p class="text-muted">Una paraula que és sent molt sovint però poques vegades podem experimentar, aquelles ganes de veure't, de veure un missatge teu al whats app, quan m'abraces, quan em fas un peto, quan em fas riure. Quan sóc amb tu experimento felicitat el 100% del temps! Per això crec que no m'equivoco si et dic que ets el noi que feia temps que estava buscant, tinc ganes de compartir els màxims moments possibles amb tu, quins moments? Llegeix la pàgina següent ;)</p>
+                  <div class="caption">
+                      <div class="inner">
+                      </div>
+                  </div>
+              </div><!-- /.item -->
                   <p class="text-muted"></p>
                   <h3 class="section-subtitle">"Somos dos pequeñas particulas viajando a velocidades increiblemente rápidas, esperando algún dia encontrarnos y juntos formar un pequeño átomo"</h3>
                 </div>
@@ -164,7 +169,7 @@
 
               <div class="section-header">
                 <h2 class="section-title">La nostra llista...</h2>
-                <h3 class="section-subtitle">Infinata llista ens espera</h3>
+                <h3 class="section-subtitle">Infinita llista ens espera</h3>
               </div>
 
               <div class="row">
@@ -172,13 +177,14 @@
                   <p class="text-muted">La fàbrica</p>
                   <p class="text-muted"> Islàndia</p>
                   <p class="text-muted"> Korea del Nord ;p</p>
-                  <p class="text-muted"> Japó</p>
+                  <p class="text-muted"> Japò</p>
                   <p class="text-muted"> Chernobil</p>
                   <p class="text-muted"> Una illa grega</p>
                   <p class="text-muted"> Una peli al cine</p>
                   <s class="text-muted"> Visitar Torroella</s>
                   <p class="text-muted"></p>
                   <s class="text-muted"> Un sopar junts</s>
+                  <p class="text-muted">...</p>
                   <p class="text-muted"></p>
                   <h3 class="section-subtitle">"El encuentro de dos personas es como el contacto de dos sustancias químicas: si hay reacción, ambas se transforman"</h3>
 
@@ -206,7 +212,10 @@
                 <h3 class="section-subtitle">Et vull dir una cosa però preferixo fer-ho en persona</h3>
               </div>
 
-              <p class="text-muted">Tota aquesta web i pistes, les he fet per dir-te algo únic que només passa un cop quan dues persones s'estan coneixent. La vida és un instant, no sabem quan poden deixar de ser-hi per això no vull esperar més, els dos fa temps que sentim el mateix i crec que és el moment de dir-ho pel seu nom ;)! El pròxim dia 29 d'abril t'espero a les 20:00h a les coordenades que apareixen al mapa, vine com sempre vens, guapo i amb el carinyo que et fa únic, res més!</p>
+              <p class="text-muted">Tota aquesta web i pistes, les he fet per dir-te algo únic que només passa un cop quan dues persones s'estan coneixent. La vida és un instant, no sabem quan poden deixar de ser-hi per això no vull esperar més, els dos fa temps que sentim el mateix i crec que és el moment de dir-ho pel seu nom ;)! El pròxim dia 23 d'abril t'espero a les 9:00h a les coordenades que apareixen al mapa, vine com sempre vens, guapo i amb el carinyo que et fa únic, res més!</p>
+                <a class="image">
+                    <img src="img/oxitocinas.jpg" class="img-responsive" alt="" />
+                </a>
             </div>
           </div>
         </div>
