--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Abel">
-    <meta name="author" content="Paul Laros">
+    <meta name="description" content="David Monje">
+    <meta name="author" content="David Monje">
     <link rel="shortcut icon" href="favicon.ico">
 
-    <title>El secret &mdash; David Monje Navidad</title>
+    <title>El secret  &mdash; David Monje Navidad</title>
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
