--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <h3 class="section-subtitle">Et vull dir una cosa però preferixo fer-ho en persona</h3>
               </div>
 
-              <p class="text-muted">Tota aquesta web i pistes, les he fet per dir-te algo únic que només passa un cop quan dues persones s'estan coneixent. La vida és un instant, no sabem quan poden deixar de ser-hi per això no vull esperar més, els dos fa temps que sentim el mateix i crec que és el moment de dir-ho pel seu nom ;)! El pròxim dia 22 d'abril t'espero a les 20:00h a les coordenades que apareixen al mapa, vine com sempre vens, guapo i amb el carinyo que et fa únic, res més!</p>
+              <p class="text-muted">Tota aquesta web i pistes, les he fet per dir-te algo únic que només passa un cop quan dues persones s'estan coneixent. La vida és un instant, no sabem quan poden deixar de ser-hi per això no vull esperar més, els dos fa temps que sentim el mateix i crec que és el moment de dir-ho pel seu nom ;)! El pròxim dia 22 d'abril t'espero a les 20:00h a les coordenades que apareixen al mapa, vine com sempre vens, guapo i amb el carinyo que et fa únic, res més!!</p>
             </div>
           </div>
         </div>
