error soluconat ja

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               </div>
               
               <p class="text-muted">
-                Realment és pot dir que fa res que ens coneixem, fa molt poc que hem començat a escriure aquesta història junts... Recordes això?</p>
+                Fa molt poc que hem començat a escriure aquesta història junts... Recordes això?</p>
               <p class="text-muted">David: Bones Adri sóc en David del Grindr</p>
               <p class="text-muted">Adri Jaén: Hola!</p>
               <p class="text-muted">David: Com vas?</p>
@@ -109,8 +109,6 @@
               <p class="text-muted">David: de sostens? jajajajajajajajaaj</p>
               <p class="text-muted">Adri Jaén: Si tiu! Unes dones q tenen una botiga de sostens xD</p>
               <p class="text-muted">Adri Jaén: 😂😂😂😂😂😂</p>
-              <p class="text-muted">David: que boo! ja no saben que inventar 😂😂😂😂</p>
-              <p class="text-muted">Adri Jaén: Ja veus</p>
               <p class="text-muted">
               El nostre primer xat! Des del primer moment em vas sorpendre i em vas treure un somriure, des de llavors no ho has deixat de fer en cap moment...</p>
                 <p class="text-muted"></p>
